Fixed unit test all test passed. Oaut implementation
